force-app/main/default/objects/LPCR_ParametrageScore__c/LPCR_ParametrageScore__c.object-meta.xml
<CustomObject>
    <label>Paramétrage Score</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Nom de Paramétrage Score</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Paramétrages Score</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>