force-app/main/default/objects/LPCR_ParametrageScore__c/fields/LPCR_Account__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Paramétrages Score</relationshipLabel>
    <relationshipName>Param_trages_Score</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>