force-app/main/default/objects/LPCR_ParametrageScore__c/fields/LPCR_ApiFieldName__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ApiFieldName__c</fullName>
    <description>De l&apos;objet préinscription</description>
    <label>Nom du champ paramétré</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LPCR_Anciennete__c</fullName>
                <label>Ancienneté (jours)</label>
            </value>
            <value>
                <fullName>LPCR_Commentaire__c</fullName>
                <label>Commentaire</label>
            </value>
            <value>
                <fullName>LPCR_CompteEntreprise__c</fullName>
                <label>Compte Entreprise</label>
            </value>
            <value>
                <fullName>LPCR_CompteFamille__c</fullName>
                <label>Compte Famille</label>
            </value>
            <value>
                <fullName>LPCR_ContactEnfant__c</fullName>
                <label>Contact Enfant</label>
            </value>
            <value>
                <fullName>LPCR_ContactParent__c</fullName>
                <label>Contact Parent</label>
            </value>
            <value>
                <fullName>LPCR_ContactParent2__c</fullName>
                <label>Contact Parent2</label>
            </value>
            <value>
                <fullName>LPCR_Contrat__c</fullName>
                <label>Contrat</label>
            </value>
            <value>
                <fullName>LPCR_DateEntreeEntreprise__c</fullName>
                <label>Date d&apos;entrée dans l&apos;entreprise</label>
            </value>
            <value>
                <fullName>Tech_DateEntreeCreche__c</fullName>
                <label>Date d&apos;entrée en crèche (Mois)</label>
            </value>
            <value>
                <fullName>LPCR_DateSortie__c</fullName>
                <label>Date de sortie</label>
            </value>
            <value>
                <fullName>LPCR_DemandeInscriptionCrecheMunicipal__c</fullName>
                <label>Demande inscription en crèche municipal?</label>
            </value>
            <value>
                <fullName>LPCR_DossierComplet__c</fullName>
                <label>Dossier complet</label>
            </value>
            <value>
                <fullName>LPCR_DetailHandicapEnfant__c</fullName>
                <label>Détail Handicap Enfant</label>
            </value>
            <value>
                <fullName>LPCR_EnfantDateDeNaissance__c</fullName>
                <label>Enfant - Date De Naissance</label>
            </value>
            <value>
                <fullName>LPCR_EnfantNom__c</fullName>
                <label>Enfant - Nom</label>
            </value>
            <value>
                <fullName>LPCR_EnfantPrenom__c</fullName>
                <label>Enfant - Prénom</label>
            </value>
            <value>
                <fullName>LPCR_ExistenceCrecheMunicipale__c</fullName>
                <label>Existence crèche municipale</label>
            </value>
            <value>
                <fullName>LPCR_HandicapEnfantDansLaFraterie__c</fullName>
                <label>Handicap enfant dans la fraterie</label>
            </value>
            <value>
                <fullName>LPCR_Jumeaux__c</fullName>
                <label>Jumeaux</label>
            </value>
            <value>
                <fullName>LPCR_ModeDAccueilDeLEnfant__c</fullName>
                <label>Mode d&apos;accueil de l&apos;enfant</label>
            </value>
            <value>
                <fullName>LPCR_NombreJours__c</fullName>
                <label>Nombre de jours (calculé)</label>
            </value>
            <value>
                <fullName>LPCR_PossedeUnModeDAccueilPourLEnfant__c</fullName>
                <label>Possède un mode d&apos;accueil pour l&apos;enfant</label>
            </value>
            <value>
                <fullName>LPCR_PrecisionMutation__c</fullName>
                <label>Précision mutation</label>
            </value>
            <value>
                <fullName>LPCR_Rep1AutreSituationPro__c</fullName>
                <label>Rep1 - Autre situation pro</label>
            </value>
            <value>
                <fullName>LPCR_Rep1Civilite__c</fullName>
                <label>Rep1 - Civilité</label>
            </value>
            <value>
                <fullName>LPCR_Rep1CodePostal__c</fullName>
                <label>Rep1 - Code Postal</label>
            </value>
            <value>
                <fullName>LPCR_Rep1DetailHandicap__c</fullName>
                <label>Rep1 - Détail Handicap</label>
            </value>
            <value>
                <fullName>LPCR_Rep1Email__c</fullName>
                <label>Rep1 - Email</label>
            </value>
            <value>
                <fullName>LPCR_Rep1Handicap__c</fullName>
                <label>Rep1 - Handicap</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>