force-app/main/default/objects/LPCR_ParametrageScore__c/fields/LPCR_DateEntree__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateEntree__c</fullName>
    <label>Date d’entrée</label>
    <type>Date</type>
</CustomField>