force-app/main/default/objects/LPCR_ParametrageScore__c/fields/LPCR_Format__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Format__c</fullName>
    <label>Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Liste</fullName>
            </value>
            <value>
                <fullName>Numéro</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Nombre</fullName>
            </value>
            <value>
                <fullName>Texte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>