force-app/main/default/objects/LPCR_ParametrageScore__c/fields/LPCR_NbJourGarde__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NbJourGarde__c</fullName>
    <label>To Delete_NbJourGarde</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>