force-app/main/default/objects/LPCR_ParametrageScore__c/fields/LPCR_ReponseCrecheMunicipale__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ReponseCrecheMunicipale__c</fullName>
    <label>To Delete_Date Réponse crèche municipale</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attribution d&apos;une place</fullName>
            </value>
            <value>
                <fullName>Refus</fullName>
            </value>
            <value>
                <fullName>Liste d&apos;attente</fullName>
            </value>
            <value>
                <fullName>Pas de réponse</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>