force-app/main/default/objects/LPCR_ParametrageScore__c/fields/LPCR_Revenu__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Revenu__c</fullName>
    <label>Revenu</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>