force-app/main/default/objects/LPCR_ParametrageScore__c/fields/LPCR_Score__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Score__c</fullName>
    <label>Score</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>