force-app/main/default/objects/LPCR_ParametrageScore__c/fields/LPCR_Valeur__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Valeur__c</fullName>
    <label>Valeur</label>
    <length>50</length>
    <type>Text</type>
</CustomField>