force-app/main/default/objects/LPCR_ParametrageScore__c/validationRules/VR_ParametrageScore_Date_format.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ParametrageScore_Date_format</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  ISPICKVAL( LPCR_Format__c , &apos;Date&apos;) , NOT(REGEX( LPCR_Valeur__c , &apos;^([123]0|[012][1-9]|31)/(0[1-9]|1[012])/(\\d{4})$&apos;)), false)</errorConditionFormula>
    <errorMessage>Format de date requis : DD/MM/YYYY</errorMessage>
</ValidationRule>