force-app/main/default/objects/LPCR_ParametrageScore__c/validationRules/VR_Valeur_ForceCheckboxFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Valeur_ForceCheckboxFormat</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT($Permission.LPCR_ByPass_VR),
    text(LPCR_Format__c)=&quot;Case à cocher&quot;,
    LOWER(LPCR_Valeur__c)&lt;&gt;&quot;true&quot;,
    LOWER(LPCR_Valeur__c)&lt;&gt;&quot;false&quot;
    )</errorConditionFormula>
    <errorDisplayField>LPCR_Valeur__c</errorDisplayField>
    <errorMessage>La valeur doit être &quot;True&quot; ou &quot;False&quot; pour un format &quot;case à cocher&quot;</errorMessage>
</ValidationRule>